--- a/Dev-Net-And-Angular.yml
+++ b/Dev-Net-And-Angular.yml
@@ -126,7 +126,7 @@ steps:
   inputs:
     versionSpec: '10.18.1'
 - script: |
-    npm install -g @angular/cli@8.3.29
+    # npm install -g @angular/cli@8.3.29
   workingDirectory: '$(System.DefaultWorkingDirectory)/ExtendedCase/ExtendedCase.WebComponent'
   displayName: 'npm install cli ExtendedCase'
 - script: 
