--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/Web.config.template
@@ -19,9 +19,9 @@
 		<add key="SmtpServer" value="smtp.datahalland.se" />
 		<add key="SmtpPort" value="25" />
 		<add key="logRequest" value="false" />
-		<add key="MicrosoftClientId" value="#{MicrosoftClientId}"/>
-		<add key="MicrosoftTenant" value="#{MicrosoftTenant}"/>
-		<add key="MicrosoftAuthority" value="#{MicrosoftAuthority}"/>
+		<add key="MicrosoftClientId" value="#{MicrosoftClientIdApi}"/>
+		<add key="MicrosoftTenant" value="#{MicrosoftTenantApi}"/>
+		<add key="MicrosoftAuthority" value="#{MicrosoftAuthorityApi}"/>
 	</appSettings>
 
 	<connectionStrings>
