--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -70,7 +70,7 @@
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
   </connectionStrings>
   <appSettings>
-    <add key="LoginMode" value="Windows" />
+    <add key="LoginMode" value="Microsoft" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="dh_filesDirectory" value="c:/temp" />
@@ -119,17 +119,15 @@
 	  <!-- 6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh -->
     <add key="reCaptchaSiteKey" value="6Lem1d4ZAAAAAL3W2FI7nrlqToDYQYqPjNeMEhZh" />
     <add key="reCaptchaSecretKey" value="6Lem1d4ZAAAAACGdIZQDHvCq4CcuKLXGe9UhC-fZ" />
-    
-    
-    <!--For Microsoft Azure Authentication-->
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientId" value="62972f9e-9859-49f4-877c-256f1b66e089" /> <!--DH Labbet-->
-    <!--<add key="ClientId" value="d731c862-2d94-47e6-a422-9c94c2b72cf3" />-->   <!--DH Solutions Azure--> 
+	    <add key="webpages:Enabled" value="false" />
+    <add key="ClientId" value="d7a3b1b6-c4a9-461f-a0d6-505f662969df" /> 
     <add key="Tenant" value="common" /> <!--If your application supports My organization only, replace this value with the Tenant Id or Tenant name (for example, contoso.onmicrosoft.com)
     If your application supports Accounts in any organizational directory, replace this value with "organizations"
     If your application supports All Microsoft account users, replace this value with "common"-->
     <add key="Authority" value="https://login.microsoftonline.com/{0}/v2.0" />
-    <add key="RedirectUri" value="https://localhost:44396" />
+    <add key="RedirectUri" value="https://localhost:447/selfservice" />
+    
+
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
