Update dh-helpdesk-web.yml for Azure Pipelines

--- a/dh-helpdesk-web.yml
+++ b/dh-helpdesk-web.yml
@@ -2,6 +2,9 @@ trigger:
   branches:
     include:
       - Development
+  tags:
+    include:
+    - 'Release/Development*'
 
 name: $(development.versionMajor).$(development.versionMinor).$(development.versionSubMinor).$(patch).$(Build.SourceVersion)
 
