--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Enums\Case\Fields\LogFields.cs" />
     <Compile Include="Enums\Case\Fields\OtherFields.cs" />
     <Compile Include="Enums\Case\Fields\UserFields.cs" />
+    <Compile Include="Enums\Case\RelationType.cs" />
     <Compile Include="Enums\Changes\Fields\AnalyzeField.cs" />
     <Compile Include="Enums\Changes\Fields\EvaluationField.cs" />
     <Compile Include="Enums\Changes\Fields\GeneralField.cs" />
