--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -1,20 +1,42 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
 	<appSettings>
-		<add key="ADAL_Microsoft_Base_Url" value="https://login.microsoftonline.com/"/>
-		<add key="ADAL_Tenant_Name" value="kommunsamverkan.onmicrosoft.com"/>
-		<add key="ADAL_Client_ID" value="896622a1-3ee7-45e4-bf60-f9413e860266"/>
-		<add key="ADAL_Resource_ID" value="api://f4c06ba7-7fa7-490d-a30d-edbf07b388ca/39290583-e3da-45b7-abc5-953c63df8109"/>
-		<add key="ADAL_Username" value="AlmSvcSCCMAdmWebservice@almhult.se"/>
-		<add key="ADAL_Password" value="2TbEoRZiNSoloGsLRfpB"/>
+		
+		<!--Settings for getting a OAUTH2 Token-->
+		<add key="ADAL_Microsoft_Base_Url" value="https://login.microsoftonline.com/" />
+		<add key="ADAL_Tenant_Name" value="kommunsamverkan.onmicrosoft.com" />
+		<add key="ADAL_Client_ID" value="896622a1-3ee7-45e4-bf60-f9413e860266" />
+		<add key="ADAL_Resource_ID" value="api://f4c06ba7-7fa7-490d-a30d-edbf07b388ca/39290583-e3da-45b7-abc5-953c63df8109" />
+		<add key="ADAL_Username" value="AlmSvcSCCMAdmWebservice@almhult.se" />
+		<add key="ADAL_Password" value="2TbEoRZiNSoloGsLRfpB" />
 		
 		<!--Example: If HTTP Status response code is 5xx. Retry 5 times. Retry 1 with a timeout for 1 sec, Retry 2 with a timeout for 2 sec...-->
-		<add key="ADAL_Retry_Connection_Count" value="5"/>
-		<add key="ADAL_Retry_Connection_Increment_MS" value="1000"/> 
+		<add key="ADAL_Retry_Connection_Count" value="5" />
+		<add key="ADAL_Retry_Connection_Increment_MS" value="1000" />
+
+
+		<!--URL's to get data from the REST API-->
+		<add key="SCCM_URL_Base" value="HTTPS://ALMHULTCMG.ALMHULT.SE/CCM_Proxy_ServerAuth/72057594037927939/adminservice/wmi/" />
+		<add key="SCCM_URL_Computer_System" value="SMS_G_System_COMPUTER_SYSTEM" />
+		<add key="SCCM_URL_Operating_System" value="SMS_G_System_OPERATING_SYSTEM" />
+		<add key="SCCM_URL_PC_BIOS" value="SMS_G_System_PC_BIOS" />
+		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY" />
+		<add key="SCCM_URL_R_System" value="SMS_R_System" />
+		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER" />
+		
+		
 	</appSettings>
 	
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
