--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
+	<connectionStrings>
+		<add name="conHD" connectionString="Data Source=dhutvsql6;Initial Catalog=Helpdesk-Dev;Integrated Security=True;Persist Security Info=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
 	<appSettings>
 		
 		<!--Settings for getting a OAUTH2 Token-->
@@ -24,8 +28,12 @@
 		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY" />
 		<add key="SCCM_URL_R_System" value="SMS_R_System" />
 		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER" />
-		
-		
+
+		<!--DB Settings-->
+		<add key="DB_Connection_Timeout_Seconds" value="60" />
+		<add key="DB_Customer_Id" value="0"/>
+		<add key="DB_Domain_Id" value="1"/>
+
 	</appSettings>
 	
     <startup> 
