--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADALConfiguration.cs" />
+    <Compile Include="DB\Connector.cs" />
     <Compile Include="Entities\RSystem.cs" />
     <Compile Include="Entities\VideoControllerData.cs" />
     <Compile Include="Entities\Wrapper.cs" />
