--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
@@ -139,7 +139,9 @@
   <ItemGroup>
     <Compile Include="ADALConfiguration.cs" />
     <Compile Include="DB\Connector.cs" />
+    <Compile Include="Entities\ComputerDB.cs" />
     <Compile Include="Entities\RSystem.cs" />
+    <Compile Include="Entities\ServerDB.cs" />
     <Compile Include="Entities\VideoControllerData.cs" />
     <Compile Include="Entities\Wrapper.cs" />
     <Compile Include="Entities\X86PCMemory.cs" />
@@ -153,6 +155,7 @@
     <Compile Include="Entities\OperatingSystemWrapper.cs" />
     <Compile Include="Entities\ComputerSystemWrapper.cs" />
     <Compile Include="Models\Computer.cs" />
+    <Compile Include="Other\Enums.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
