--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -28,6 +28,14 @@
 		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY" />
 		<add key="SCCM_URL_R_System" value="SMS_R_System" />
 		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER" />
+		
+		<add key="SCCM_URL_Enclosure" value="SMS_G_System_SYSTEM_ENCLOSURE" />
+		<add key="SCCM_URL_Processor" value="SMS_G_System_PROCESSOR" />
+		<add key="SCCM_URL_Network_Adapter" value="SMS_G_System_NETWORK_ADAPTER" />
+		<add key="SCCM_URL_Network_Adapter_Configuration" value="SMS_G_System_NETWORK_ADAPTER_CONFIGURATION" />
+		<add key="SCCM_URL_Sound_Device" value="SMS_G_System_SOUND_DEVICE" />
+		<add key="SCCM_URL_Add_Remove_Programs" value="SMS_G_System_ADD_REMOVE_PROGRAMS" />
+		<add key="SCCM_URL_Logical_Dish" value="SMS_G_System_LOGICAL_DISK" />
 
 		<!--DB Settings-->
 		<add key="DB_Connection_Timeout_Seconds" value="60" />
