--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -22,11 +22,17 @@
 
 		<!--URL's to get data from the REST API-->
 		<add key="SCCM_URL_Base" value="HTTPS://ALMHULTCMG.ALMHULT.SE/CCM_Proxy_ServerAuth/72057594037927939/adminservice/wmi/" />
+
+
+		<!--This is the subselector/looper. EG. HTTPS://ALMHULTCMG.ALMHULT.SE/CCM_Proxy_ServerAuth/72057594037927939/adminservice/wmi/SMS_R_System(16777909)/SMS_G_System_OPERATING_SYSTEM -->
+		<add key="SCCM_URL_R_System" value="SMS_R_System" />
+
+
+		<!--URL's to get additional data from the REST API-->
 		<add key="SCCM_URL_Computer_System" value="SMS_G_System_COMPUTER_SYSTEM" />
 		<add key="SCCM_URL_Operating_System" value="SMS_G_System_OPERATING_SYSTEM" />
 		<add key="SCCM_URL_PC_BIOS" value="SMS_G_System_PC_BIOS" />
 		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY" />
-		<add key="SCCM_URL_R_System" value="SMS_R_System" />
 		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER" />
 		
 		<add key="SCCM_URL_Enclosure" value="SMS_G_System_SYSTEM_ENCLOSURE" />
@@ -35,7 +41,7 @@
 		<add key="SCCM_URL_Network_Adapter_Configuration" value="SMS_G_System_NETWORK_ADAPTER_CONFIGURATION" />
 		<add key="SCCM_URL_Sound_Device" value="SMS_G_System_SOUND_DEVICE" />
 		<add key="SCCM_URL_Add_Remove_Programs" value="SMS_G_System_ADD_REMOVE_PROGRAMS" />
-		<add key="SCCM_URL_Logical_Dish" value="SMS_G_System_LOGICAL_DISK" />
+		<add key="SCCM_URL_Logical_Disk" value="SMS_G_System_LOGICAL_DISK" />
 
 		<!--DB Settings-->
 		<add key="DB_Connection_Timeout_Seconds" value="60" />
