--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
@@ -140,21 +140,23 @@
     <Compile Include="ADALConfiguration.cs" />
     <Compile Include="DB\Connector.cs" />
     <Compile Include="Entities\ComputerDB.cs" />
+    <Compile Include="Entities\Enclosure.cs" />
+    <Compile Include="Entities\GenericValueWrapper.cs" />
+    <Compile Include="Entities\NetworkAdapterConfiguration.cs" />
+    <Compile Include="Entities\LogicalDisk.cs" />
+    <Compile Include="Entities\Programs.cs" />
+    <Compile Include="Entities\SoundDevice.cs" />
     <Compile Include="Entities\RSystem.cs" />
     <Compile Include="Entities\ServerDB.cs" />
     <Compile Include="Entities\VideoControllerData.cs" />
     <Compile Include="Entities\Wrapper.cs" />
+    <Compile Include="Entities\Processor.cs" />
+    <Compile Include="Entities\NetworkAdapter.cs" />
     <Compile Include="Entities\X86PCMemory.cs" />
     <Compile Include="Entities\PCBios.cs" />
     <Compile Include="Entities\OperatingSystem.cs" />
     <Compile Include="Entities\ComputerSystem.cs" />
-    <Compile Include="Entities\RSystemWrapper.cs" />
-    <Compile Include="Entities\VideoControllerDataWrapper.cs" />
-    <Compile Include="Entities\X86PCMemoryWrapper.cs" />
-    <Compile Include="Entities\PCBiosWrapper.cs" />
-    <Compile Include="Entities\OperatingSystemWrapper.cs" />
-    <Compile Include="Entities\ComputerSystemWrapper.cs" />
-    <Compile Include="Models\Computer.cs" />
+    <Compile Include="Models\Device.cs" />
     <Compile Include="Other\Enums.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
