--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -48,6 +48,14 @@
 		<add key="DB_Customer_Id" value="0"/>
 		<add key="DB_Domain_Id" value="1"/>
 
+		<!--Program settings-->
+
+		<!--This is a threading option. The payload is divided into x batches, every batch contains a nested 
+		inner batch. If this value is for example set to 8. 16 hyper threads will be consumed to run the application.
+		Beware. Too high number will result in thread-switching, witch in turn results in alot of overhead, maybe
+		resulting in worse performance. This value should be set according to SPECS of the CPU.-->
+		<add key="Setting_Chunk_Page_Size" value="8"/>
+
 	</appSettings>
 	
     <startup> 
