--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -29,19 +29,19 @@
 
 
 		<!--URL's to get additional data from the REST API-->
-		<add key="SCCM_URL_Computer_System" value="SMS_G_System_COMPUTER_SYSTEM" />
-		<add key="SCCM_URL_Operating_System" value="SMS_G_System_OPERATING_SYSTEM" />
-		<add key="SCCM_URL_PC_BIOS" value="SMS_G_System_PC_BIOS" />
-		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY" />
-		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER" />
+		<add key="SCCM_URL_Computer_System" value="SMS_G_System_COMPUTER_SYSTEM?$select=Name,Model,Manufacturer,UserName,TimeStamp" />
+		<add key="SCCM_URL_Operating_System" value="SMS_G_System_OPERATING_SYSTEM?$select=Caption,CSDVersion,Version" />
+		<add key="SCCM_URL_PC_BIOS" value="SMS_G_System_PC_BIOS?$select=SerialNumber,ReleaseDate,SMBIOSBIOSVersion" />
+		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY?$select=TotalPhysicalMemory" />
+		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER?$select=Name" />
 		
-		<add key="SCCM_URL_Enclosure" value="SMS_G_System_SYSTEM_ENCLOSURE" />
-		<add key="SCCM_URL_Processor" value="SMS_G_System_PROCESSOR" />
-		<add key="SCCM_URL_Network_Adapter" value="SMS_G_System_NETWORK_ADAPTER" />
-		<add key="SCCM_URL_Network_Adapter_Configuration" value="SMS_G_System_NETWORK_ADAPTER_CONFIGURATION" />
-		<add key="SCCM_URL_Sound_Device" value="SMS_G_System_SOUND_DEVICE" />
-		<add key="SCCM_URL_Add_Remove_Programs" value="SMS_G_System_ADD_REMOVE_PROGRAMS" />
-		<add key="SCCM_URL_Logical_Disk" value="SMS_G_System_LOGICAL_DISK" />
+		<add key="SCCM_URL_Enclosure" value="SMS_G_System_SYSTEM_ENCLOSURE?$select=ChassisTypes" />
+		<add key="SCCM_URL_Processor" value="SMS_G_System_PROCESSOR?$select=Name" />
+		<add key="SCCM_URL_Network_Adapter" value="SMS_G_System_NETWORK_ADAPTER?$select=Name" />
+		<add key="SCCM_URL_Network_Adapter_Configuration" value="SMS_G_System_NETWORK_ADAPTER_CONFIGURATION?$select=IPAddress,MacAddress" />
+		<add key="SCCM_URL_Sound_Device" value="SMS_G_System_SOUND_DEVICE?$select=Name" />
+		<add key="SCCM_URL_Add_Remove_Programs" value="SMS_G_System_ADD_REMOVE_PROGRAMS?$select=DisplayName,Version,Publisher" />
+		<add key="SCCM_URL_Logical_Disk" value="SMS_G_System_LOGICAL_DISK?$select=Name,DeviceId,FileSystem,Size,FreeSpace,DriveType" />
 
 		<!--DB Settings-->
 		<add key="DB_Connection_Timeout_Seconds" value="60" />
@@ -54,7 +54,7 @@
 		inner batch. If this value is for example set to 8. 16 hyper threads will be consumed to run the application.
 		Beware. Too high number will result in thread-switching, witch in turn results in alot of overhead, maybe
 		resulting in worse performance. This value should be set according to SPECS of the CPU.-->
-		<add key="Setting_Chunk_Page_Size" value="8"/>
+		<add key="Setting_Chunk_Page_Size" value="4"/>
 
 	</appSettings>
 	
