--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -33,7 +33,7 @@
 		<add key="SCCM_URL_Operating_System" value="SMS_G_System_OPERATING_SYSTEM?$select=Caption,CSDVersion,Version" />
 		<add key="SCCM_URL_PC_BIOS" value="SMS_G_System_PC_BIOS?$select=SerialNumber,ReleaseDate,SMBIOSBIOSVersion" />
 		<add key="SCCM_URL_X86_PC_Memory" value="SMS_G_System_X86_PC_MEMORY?$select=TotalPhysicalMemory" />
-		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER?$select=Name" />
+		<add key="SCCM_URL_Video_Controller" value="SMS_G_System_VIDEO_CONTROLLER?$select=Name,DeviceId" />
 		
 		<add key="SCCM_URL_Enclosure" value="SMS_G_System_SYSTEM_ENCLOSURE?$select=ChassisTypes" />
 		<add key="SCCM_URL_Processor" value="SMS_G_System_PROCESSOR?$select=Name" />
@@ -55,6 +55,9 @@
 		Beware. Too high number will result in thread-switching, witch in turn results in alot of overhead, maybe
 		resulting in worse performance. This value should be set according to SPECS of the CPU.-->
 		<add key="Setting_Chunk_Page_Size" value="4"/>
+
+		<!--This is used to debugging purposes only, set to 0 in production. Else, dont fetch data for all of the devices-->
+		<add key="Setting_Limit_Devices" value="20"/>
 
 	</appSettings>
 	
