--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/DH.Helpdesk.SCCM.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Models\Device.cs" />
     <Compile Include="Other\Enums.cs" />
     <Compile Include="Other\Extension.cs" />
+    <Compile Include="Other\Helpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
