--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/app.config.template
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/app.config.template
@@ -2,22 +2,22 @@
 <configuration>
 
 	<connectionStrings>
-		<add name="conHD" connectionString="Data Source=dhutvsql6;Initial Catalog=Helpdesk-Dev;Integrated Security=True;Persist Security Info=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+		<add name="conHD" connectionString="Data Source=#{DatabaseServer};Initial Catalog=#{DatabaseName};User Id=#{DatabaseUser}; Password=#{DatabasePassword};Network Library=dbmssocn;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 
 	<appSettings>
 		
 		<!--Settings for getting a OAUTH2 Token-->
-		<add key="ADAL_Microsoft_Base_Url" value="https://login.microsoftonline.com/"/>
-		<add key="ADAL_Tenant_Name" value="kommunsamverkan.onmicrosoft.com"/>
-		<add key="ADAL_Client_ID" value="896622a1-3ee7-45e4-bf60-f9413e860266"/>
-		<add key="ADAL_Resource_ID" value="api://f4c06ba7-7fa7-490d-a30d-edbf07b388ca/39290583-e3da-45b7-abc5-953c63df8109"/>
-		<add key="ADAL_Username" value="AlmSvcSCCMAdmWebservice@almhult.se"/>
-		<add key="ADAL_Password" value="2TbEoRZiNSoloGsLRfpB"/>
+		<add key="ADAL_Microsoft_Base_Url" value="#{ADAL_Microsoft_Base_Url}"/>
+		<add key="ADAL_Tenant_Name" value="#{ADAL_Tenant_Name}"/>
+		<add key="ADAL_Client_ID" value="#{ADAL_Client_ID}"/>
+		<add key="ADAL_Resource_ID" value="#{ADAL_Resource_ID}"/>
+		<add key="ADAL_Username" value="#{ADAL_Username}"/>
+		<add key="ADAL_Password" value="#{ADAL_Password}"/>
 		
 		<!--Example: If HTTP Status response code is 5xx. Retry 5 times. Retry 1 with a timeout for 1 sec, Retry 2 with a timeout for 2 sec...-->
-		<add key="ADAL_Retry_Connection_Count" value="5"/>
-		<add key="ADAL_Retry_Connection_Increment_MS" value="1000"/>
+		<add key="ADAL_Retry_Connection_Count" value="#{ADAL_Retry_Connection_Count}"/>
+		<add key="ADAL_Retry_Connection_Increment_MS" value="#{ADAL_Retry_Connection_Increment_MS}"/>
 
 
 		<!--URL's to get data from the REST API-->
