#234520 - Bulk edit - Closing reason

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -57,7 +57,7 @@
     </selfServiceUrlSetting>
   </selfServiceConfigurable>
   <connectionStrings>
-    <!--<add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />-->
+    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
     <!--dev-->
     <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHDS01\SQLEXPRESS;Initial Catalog=Helpdesk-Dev;User Id=pds;Password=pds;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient" />-->
     <!--dhutvsql6-->
@@ -70,7 +70,7 @@
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
   </connectionStrings>
   <appSettings>
-    <add key="LoginMode" value="Microsoft" />
+    <add key="LoginMode" value="Application" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="dh_filesDirectory" value="c:/temp" />
@@ -85,7 +85,7 @@
     <add key="ida:ProviderSelection" value="productionSTS" />
     <add key="SmtpServer" value="smtp.datahalland.se" />
     <add key="SmtpPort" value="25" />
-    <add key="DefaultUserId" value="" />
+    <add key="DefaultUserId" value="ds" />
     <add key="DefaultEmployeeNumber" value="13106668" />
     <add key="ConfirmMsgAfterCaseRegistration" value="true" />
     <add key="CaseList" value="coworkers" />
