--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="EPPlus" version="4.0.2" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.45" targetFramework="net472" />
   <package id="IpMatcher" version="1.0.1" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.0" targetFramework="net472" />
   <package id="jQuery" version="1.8.3" targetFramework="net472" />
