--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -505,6 +505,8 @@
     <Content Include="Content\css\font-awesome.css" />
     <Content Include="Content\css\font-awesome.min.css" />
     <Content Include="Content\css\jquery.toastmessage.css" />
+    <Content Include="Content\css\summernote-lite.css" />
+    <Content Include="Content\css\summernote.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\images\sort_asc.png" />
     <Content Include="Content\images\sort_asc_disabled.png" />
@@ -547,6 +549,21 @@
     <Content Include="Content\js\Shared\commonUtils.js" />
     <Content Include="Content\js\Shared\app.layout.js" />
     <Content Include="Content\js\typeahead.js" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.css" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.js" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.min.css" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.min.js" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.min.js.LICENSE.txt" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.css" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.js" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.min.css" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.min.js" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.min.js.LICENSE.txt" />
+    <Content Include="Content\summernote-0.8.18\summernote.css" />
+    <Content Include="Content\summernote-0.8.18\summernote.js" />
+    <Content Include="Content\summernote-0.8.18\summernote.min.css" />
+    <Content Include="Content\summernote-0.8.18\summernote.min.js" />
+    <Content Include="Content\summernote-0.8.18\summernote.min.js.LICENSE.txt" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -808,6 +825,20 @@
     <Content Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\summernote-0.8.18\font\summernote.eot" />
+    <Content Include="Content\summernote-0.8.18\font\summernote.ttf" />
+    <Content Include="Content\summernote-0.8.18\font\summernote.woff" />
+    <Content Include="Content\summernote-0.8.18\font\summernote.woff2" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.js.map" />
+    <Content Include="Content\summernote-0.8.18\summernote-bs4.min.js.map" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.js.map" />
+    <Content Include="Content\summernote-0.8.18\summernote-lite.min.js.map" />
+    <Content Include="Content\summernote-0.8.18\summernote.js.map" />
+    <Content Include="Content\summernote-0.8.18\summernote.min.js.map" />
+    <Content Include="Content\css\font\summernote.eot" />
+    <Content Include="Content\css\font\summernote.ttf" />
+    <Content Include="Content\css\font\summernote.woff" />
+    <Content Include="Content\css\font\summernote.woff2" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
