--- a/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
+++ b/dhHelpdeskNG/DH.Helpdesk.SCCM/App.config
@@ -53,6 +53,9 @@
 		<!--Depends on Show_Token, Show_Token must be set to 1 for this to take effect-->
 		<add key="Copy_Token_To_Clipboard" value="1" />
 
+		<!--If to use Last logged in user or to use computer user-->
+		<add key="UseLastLoginUser" value="1" />
+
 		<!--This is a threading option. The payload is divided into x batches, every batch contains a nested 
 		inner batch. If this value is for example set to 8. 16 hyper threads will be consumed to run the application.
 		Beware. Too high number will result in thread-switching, witch in turn results in alot of overhead, maybe
