Klar vi Selfservice?

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -93,7 +93,7 @@
     <!-- "SelfService", "LineManager" -->
     <add key="CurrentApplication" value="SelfService" />
     <!-- Chat = true-->
-	<add key="ShowCommunicationForSelfService" value="true" />
+	<add key="ShowCommunicationForSelfService" value="false" />
 
     <!-- Single Sign Keys-->
     <add key="ApplicationId" value="Line Manager" />
