--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.template
@@ -27,6 +27,8 @@
 		<add key="SmtpServer" value="smtp.datahalland.se"/>
 		<add key="SmtpPort" value="25"/>
 		<add key="aspnet:MaxJsonDeserializerMembers" value="150000"/>
+		<add key="aspnet:RequestQueueLimitPerSession" value="2147483647"/>
+		
 		#{if AuthenticationMode == "application"}
 		<add key="LoginMode" value="Application"/>
 		<add key="MicrosoftLogin" value="1" /><!-- 1 = Show Microsoft login-button, else 0-->
