--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.windows.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Web.config.windows.template
@@ -26,6 +26,8 @@
 		<add key="log4net.Internal.Debug" value="true" />
 		<add key="SmtpServer" value="smtp.datahalland.se" />
 		<add key="SmtpPort" value="25" />
+        <add key="aspnet:RequestQueueLimitPerSession" value="2147483647"/>
+        <add key="aspnet:AllowConcurrentRequestsPerSession" value="true" />
 		<add key="DHProfiler:Application" value="Helpdesk" />
 		<add key="DHProfiler:Environment" value="Development" />
 		<add key="DHProfiler:MeasureLoggingPerformance" value="true" />
